--- a/static/styles.css
+++ b/static/styles.css
@@ -1,6 +1,137 @@
 body {
-    font-family: Arial, sans-serif;
-    background-color: #f4f4f4;
+    font-family: 'Arial', sans-serif;
+    background-color: #f4f6f9;
+}
+    .d-flex {
+        display: flex;
+    }
+    .justify-content-between {
+        justify-content: space-between;
+    }
+    .align-items-center {
+        align-items: center;
+    }
+
+.chart-container { position: relative; width: 100%; height: 400px; }
+.chart-canvas { width: 100% !important; height: 100% !important; }
+.alert { position: fixed; top: 20px; right: 20px; z-index: 1000; }
+.bg-light-red { background-color: #f8d7da; }
+.bg-light-green { background-color: #d4edda; }
+.bg-light-orange { background-color: #fff3cd; }
+.bg-light-pink { background-color: #f8d7da; }
+
+    .highlight-green {
+        background-color: lightgreen;
+        transition: background-color 1s ease;
+    }
+    .highlight-red {
+        background-color: lightcoral;
+        transition: background-color 1s ease;
+    }
+    .fade-out {
+        transition: background-color 2s ease; /* Smooth transition for fading out */
+    }
+    
+    @keyframes fadeOut {
+        from { background-color: inherit; }
+        to { background-color: transparent; }
+    }    
+
+header {
+    background-color: #343a40;
+    color: #fff;
+    padding: 20px;
+}
+
+.container {
+    max-width: 1200px;
+    margin-top: 40px;
+}
+
+.form-group {
+    margin-bottom: 1.5rem;
+}
+
+label {
+    font-weight: bold;
+}
+
+.input-container {
+    display: flex;
+    flex-wrap: wrap;
+    border: 1px solid #ddd;
+    padding: 10px;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.input-box {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 8px;
+    flex-grow: 1;
+}
+
+.chip {
+    background-color: #007bff;
+    color: white;
+    padding: 5px 12px;
+    border-radius: 16px;
+    display: flex;
+    align-items: center;
+    margin: 4px;
+    font-size: 14px;
+    transition: transform 0.2s ease;
+}
+
+.chip:hover {
+    transform: scale(1.05);
+}
+
+.chip .close {
+    margin-left: 8px;
+    cursor: pointer;
+    font-size: 16px;
+}
+
+.input-box input {
+    border: none;
+    outline: none;
+    padding: 8px;
+    font-size: 16px;
+    flex-grow: 1;
+    min-width: 80px;
+    border-radius: 4px;
+    background-color: #f9f9f9;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
+}
+
+.input-box input:focus {
+    background-color: #fff;
+    border: 1px solid #007bff;
+}
+
+.form-control {
+    border-radius: 5px;
+}
+
+.btn-primary {
+    background-color: #007bff;
+    border-color: #007bff;
+    padding: 12px 24px;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background-color 0.3s ease;
+}
+
+.btn-primary:hover {
+    background-color: #0056b3;
+    border-color: #0056b3;
+}
+
+.btn-primary:focus {
+    box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.5);
 }
 
 .loading {
