--- a/templates/results.html
+++ b/templates/results.html
@@ -8,29 +8,18 @@
     <!-- External Stylesheets -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 
     <!-- Chart.js CDN -->
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-
-    <!-- Custom Inline Styles -->
-    <style>
-        .chart-container { position: relative; width: 100%; height: 400px; }
-        .chart-canvas { width: 100% !important; height: 100% !important; }
-        .alert { position: fixed; top: 20px; right: 20px; z-index: 1000; }
-        .bg-light-red { background-color: #f8d7da; }
-        .bg-light-green { background-color: #d4edda; }
-        .bg-light-orange { background-color: #fff3cd; }
-        .bg-light-pink { background-color: #f8d7da; }
-    </style>
 </head>
 <body>
     <header class="bg-dark text-white text-center py-3">
         <h1>Stock Analysis Results</h1>
+        <p>Hello {{ user_id }}</p>
     </header>
     
     <div class="container mt-4">
-        <button class="btn btn-secondary mb-3" onclick="window.location.href='/edit'">Edit</button>
-
         <!-- Alert for missing tickers -->
         {% if missing_tickers %}
         <div id="alert" class="alert alert-danger alert-dismissible fade show" role="alert">
@@ -42,15 +31,20 @@
         {% set sorted_portfolio = results.portfolio | sort(attribute='action', reverse=true) %}
         <!-- Portfolio Section -->
         <section>
-        <div class="container">
-            <h2>My Portfolio</h2>
+            <div class="container">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h2>My Portfolio</h2>
+                    <button class="btn btn-secondary" onclick="window.location.href='/edit'">
+                        <i class="fas fa-edit"></i>
+                    </button>
+                </div>
             <div class="row">
                 {% for result in sorted_portfolio %}
                 <div class="col-lg-4 col-md-6 mb-4">
                     <div class="card {% if result.action == 'Sell' %} bg-light-red {% endif %}">
                         <div class="card-body">
                             <h5 class="card-title"><a href="{{ result.external_link }}" target="_blank">{{ result.ticker }}</a></h5>
-                            <p class="card-text">Current Price: {{ result.current_price }}</p>
+                            <p class="card-text">Current Price: <span id="price-{{ result.ticker }}">{{ result.current_price }}</span></p>
                             <p class="card-text">Average Price: {{ result.average_price }}</p>
                             <p class="card-text">Percentage Difference: {{ result.percentage_diff }}</p>
                             {% if result.trend_status %}
@@ -82,7 +76,7 @@
                             {% endif %}">
                             <div class="card-body">
                                 <h5 class="card-title"><a href="{{ result.external_link }}" target="_blank">{{ result.ticker }}</a></h5>
-                                <p class="card-text">Current Price: {{ result.current_price }}</p>
+                                <p class="card-text">Current Price: <span id="price-{{ result.ticker }}">{{ result.current_price }}</span></p>
                                 <p class="card-text">Rolling Average Price: {{ result.average_price }}</p>
                                 <p class="card-text">Percentage Difference: {{ result.percentage_diff }}</p>
                                 <p class="card-text action-{{ result.action | lower | replace(' ', '-') }}">{{ result.action }}</p>
@@ -106,27 +100,6 @@
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <img id="modalImage" src="" alt="Chart" class="img-fluid">
-        </div>
-    </div>
-
-    <!-- Popup for refresh recommendation -->
-    <div id="refreshPopup" class="modal" tabindex="-1" role="dialog">
-        <div class="modal-dialog" role="document">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title">Refresh Recommendation</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
-                </div>
-                <div class="modal-body">
-                    <p>It's been 5 minutes. We recommend refreshing the page to ensure you have the latest data. Your current data will remain intact.</p>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" onclick="refreshPage()">Refresh Now</button>
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Later</button>
-                </div>
-            </div>
         </div>
     </div>
 
@@ -168,15 +141,53 @@
             }, 30000); // 30 seconds
         });
 
-        // Show refresh recommendation popup after 3 seconds (3000 milliseconds)
-        setTimeout(() => {
-            document.getElementById('refreshPopup').style.display = 'block';
-        }, 300000); // 3 seconds
-
-        // Refresh the page and retain data
-        function refreshPage() {
-            location.reload();
+        // Function to fetch the latest stock prices
+    async function fetchLatestPrices() {
+        try {
+            const response = await fetch('/latest_prices');
+            const data = await response.json();
+            updatePricesAndCharts(data);
+        } catch (error) {
+            console.error('Error fetching latest prices:', error);
         }
+    }
+
+    // Function to update prices and charts on the page
+    function updatePricesAndCharts(data) {
+        Object.keys(data).forEach(ticker => {
+            const priceElement = document.getElementById(`price-${ticker}`);
+            const currentPrice = parseFloat(priceElement.innerText.replace('$', ''));
+            const newPrice = data[ticker].current_price;
+
+            if (newPrice !== currentPrice) {
+                priceElement.innerText = `$${newPrice.toFixed(2)}`;
+                priceElement.classList.add(newPrice > currentPrice ? 'highlight-green' : 'highlight-red');
+                
+                // Use a separate timeout for fade-out
+                setTimeout(() => {
+                    priceElement.classList.remove(newPrice > currentPrice ? 'highlight-green' : 'highlight-red');
+                    priceElement.classList.add('fade-out');
+                }, 1000);  // Delay before fading out
+
+                setTimeout(() => {
+                    priceElement.classList.remove('fade-out');
+                }, 3000);  // Total duration for transition and fade-out
+            }
+
+            // Update the last entry in the chart for the ticker
+            const chart = charts[`${ticker}Chart`];
+            if (chart) {
+                const lastIndex = chart.data.datasets[0].data.length - 1;
+                chart.data.datasets[0].data[lastIndex] = newPrice;
+                chart.update();
+            }
+        });
+    }
+
+    // Fetch latest prices every 20 seconds
+    setInterval(fetchLatestPrices, 10000);
+
+
 
         // Store existing chart instances
         const charts = {};
