--- a/templates/results.html
+++ b/templates/results.html
@@ -17,7 +17,7 @@
 <body>
     <header class="bg-dark text-white text-center py-3">
         <h1>Stock Analysis Results</h1>
-        <p>Hello {{ user_id }}</p>
+        <p>Hello {{ user_id }}!</p>
     </header>
     
     <div class="container mt-4">
