Add heatmap visualization and user data handling improvements

--- a/templates/index.html
+++ b/templates/index.html
@@ -55,6 +55,7 @@
                 <input class="form-control" type="number" name="watch_list_trend_days" id="watch_list_trend_days" value="30" required>
             </div>
             <button type="submit" class="btn btn-primary">Analyze</button>
+            <a href="{{ url_for('heatmap') }}" class="btn btn-secondary">View Heatmap</a>
         </form>
     </div>
 
